--- a/app/src/main/res/layout/fragment_purchase_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_view.xml
@@ -23,7 +23,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/service_type"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -54,7 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/item_name"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -63,7 +63,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/item_name"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -86,7 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/quantity"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -95,7 +94,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/quantity"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -118,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/color"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -127,7 +125,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/color"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -150,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/material"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -159,7 +156,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/material"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -182,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/description"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -192,7 +188,6 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
                     android:gravity="top"
-                    android:hint="@string/description"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -216,7 +211,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/brand"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -225,7 +220,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/brand"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -248,7 +242,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/delivery_address"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -257,7 +251,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/delivery_address"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -280,7 +273,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/notes"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
 
@@ -291,7 +284,6 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
                     android:gravity="top"
-                    android:hint="@string/notes"
                     android:importantForAutofill="no"
                     android:padding="5dp"
                     android:textColor="@color/black"
@@ -314,7 +306,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/attach_file"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <LinearLayout
