--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".requests.request_details.RequestDetailsActivity">
+    tools:context=".requests.RequestDetailsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -113,7 +113,8 @@
                 android:orientation="vertical"
                 android:paddingStart="20dp"
                 android:paddingTop="20dp"
-                android:paddingEnd="20dp">
+                android:paddingEnd="20dp"
+                android:paddingBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
