--- a/app/src/main/res/layout/fragment_photography_view.xml
+++ b/app/src/main/res/layout/fragment_photography_view.xml
@@ -23,7 +23,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/service_type"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -54,7 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/item_name"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -63,7 +63,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/item_name"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -86,7 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/country"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -95,7 +94,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/country"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -118,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/location"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -127,7 +125,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/location"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -150,7 +147,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/days"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -159,7 +156,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/days"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -182,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/project_type"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -191,7 +187,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/project_type"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -214,7 +209,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/camera_type"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -223,7 +218,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/camera_type"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -246,7 +240,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/number_of_cameras"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -255,7 +249,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/number_of_cameras"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -278,7 +271,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/lighting"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
 
@@ -288,7 +281,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/lighting"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -313,7 +305,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/chroma"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
 
@@ -323,7 +315,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/chroma"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -348,7 +339,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/props"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
 
@@ -358,7 +349,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
-                    android:hint="@string/props"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -383,7 +373,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/description"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
                 <TextView
@@ -393,7 +383,6 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
                     android:gravity="top"
-                    android:hint="@string/description"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
@@ -416,7 +405,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/notes"
-                    android:textColor="@color/black"
+                    android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
 
@@ -427,7 +416,6 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/et_white"
                     android:gravity="top"
-                    android:hint="@string/notes"
                     android:importantForAutofill="no"
                     android:padding="10dp"
                     android:textColor="@color/black"
