--- a/app/src/main/res/layout/fragment_purchase_requests_list.xml
+++ b/app/src/main/res/layout/fragment_purchase_requests_list.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".requests.list.Print_requests_fragment">
+    tools:context=".requests.list.Purchase_requests_list">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_request_print" />
+        tools:listitem="@layout/item_request_purchase" />
+
 
 
     <ProgressBar
@@ -17,5 +19,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
-
 </FrameLayout>
