--- a/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,9 +18,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:orientation="vertical">
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -44,14 +45,14 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray_cost"/>
+                android:background="@color/line_gray_cost" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:orientation="vertical">
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -76,14 +77,14 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray_cost"/>
+                android:background="@color/line_gray_cost" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:orientation="vertical">
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -108,14 +109,14 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray_cost"/>
+                android:background="@color/line_gray_cost" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:orientation="vertical">
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -139,14 +140,14 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray_cost"/>
+                android:background="@color/line_gray_cost" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:orientation="vertical">
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -166,6 +167,70 @@
                     android:padding="5dp"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/change_status_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/reject"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_reject"
+                        app:tint="@color/red" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/reject"
+                        android:textColor="@color/red" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/approve"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_approve"
+                        app:tint="@color/green" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/approve"
+                        android:textColor="@color/green" />
+                </LinearLayout>
+
+
+                <ProgressBar
+                    android:id="@+id/progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+
             </LinearLayout>
 
         </LinearLayout>
